--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,20 +2,29 @@
 eclipse.project.name = appName + '-core'
 
 dependencies {
-  api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
-  api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-  api "com.badlogicgames.gdx:gdx:$gdxVersion"
-  api "com.kotcrab.vis:vis-ui:$visUiVersion"
-  api "io.github.libktx:ktx-actors:$ktxVersion"
-  api "io.github.libktx:ktx-app:$ktxVersion"
-  api "io.github.libktx:ktx-box2d:$ktxVersion"
-  api "io.github.libktx:ktx-graphics:$ktxVersion"
-  api "io.github.libktx:ktx-log:$ktxVersion"
-  api "io.github.libktx:ktx-math:$ktxVersion"
-  api "io.github.libktx:ktx-scene2d:$ktxVersion"
-  api "io.github.libktx:ktx-style:$ktxVersion"
-  api "io.github.libktx:ktx-tiled:$ktxVersion"
-  api "io.github.libktx:ktx-vis-style:$ktxVersion"
-  api "io.github.libktx:ktx-vis:$ktxVersion"
-  api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+
+    // core deps
+    api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
+    api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    api "com.badlogicgames.gdx:gdx:$gdxVersion"
+    api "com.kotcrab.vis:vis-ui:$visUiVersion"
+    api "io.github.libktx:ktx-actors:$ktxVersion"
+    api "io.github.libktx:ktx-app:$ktxVersion"
+    api "io.github.libktx:ktx-assets:$ktxVersion"
+    api "io.github.libktx:ktx-box2d:$ktxVersion"
+    api "io.github.libktx:ktx-graphics:$ktxVersion"
+    api "io.github.libktx:ktx-log:$ktxVersion"
+    api "io.github.libktx:ktx-math:$ktxVersion"
+    api "io.github.libktx:ktx-scene2d:$ktxVersion"
+    api "io.github.libktx:ktx-style:$ktxVersion"
+    api "io.github.libktx:ktx-tiled:$ktxVersion"
+    api "io.github.libktx:ktx-vis-style:$ktxVersion"
+    api "io.github.libktx:ktx-vis:$ktxVersion"
+
+    // thrid-party deps
+    api "io.github.quillraven.fleks:Fleks:$fleksVersion"
+
+    // language runtime
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+
 }
