feat: 更新 EntitySpawnSystem，使实体编辑在 Tiled 内完成成为可能

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 
     // thrid-party deps
     api "io.github.quillraven.fleks:Fleks:$fleksVersion"
+    implementation 'com.google.guava:guava:32.1.2-jre'
 
     // language runtime
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
